--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -1,17 +1,50 @@
 
 
-body { font-family:  serif; 
+body { font-family: "Times New Roman", Times, serif; 
 	    background: #F0F8FF; 
 	    margin: 50px}
 
 header{ font-size:20px;
-        margin: 50px; }
+        margin: center; }
 
 
-/*h2 { color: darkblue; } */
-nav {  font-size: 2rem;
+h2 { color: darkblue;
+     font-family: sans-serif; } 
+
+
+
+nav {  font-size: 1.5rem;
        padding: 1rem  2rem;
-       border: 0.5rem solid darkblue;
-       margin: 50px;
+       border: 0.25rem solid black;
        background: lightblue;
         }
+#image-one { width: 500px ; 
+	         height: 400px; 
+	         margin-left: 1rem;
+	          }
+
+#image-two { width: 400px; 
+	         height: 400px; 
+	         margin-left: 1rem; }
+
+figcaption { font-size: 1rem; }	  
+
+a:visited { color: rgb(7,185,245); }        
+a:hover { color: darkblue; }
+a:active { color:red; }
+
+ul { background-color: orange;
+padding: 1rem; 
+border: 0.25rem solid black;
+}
+     
+ul li { margin-left: 1rem;
+ font-family: italic; }
+
+
+
+
+
+ /* Second webpage "Hobbies" CSS */
+
+#hobbies-body { background-color: rgb(156,247,153); }
