--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -4,6 +4,12 @@ body { font-family: "Times New Roman", Times, serif;
 	    background: #F0F8FF; 
 	    margin: 50px}
 
+
+
+a[id="red"] { color: red; }
+a[id="green"] {color:green;}
+a[id="blue"] {color:blue;}
+
 header{ font-size:20px;
         margin: center; }
 
@@ -45,6 +51,35 @@ ul li { margin-left: 1rem;
 
 
 
+
  /* Second webpage "Hobbies" CSS */
 
 #hobbies-body { background-color: rgb(156,247,153); }
+
+#welcome-hobbies{ color: rgba(50,50,150,0.8) ;
+font-family:  sans-serif;
+font-size: 2rem;
+margin-left: 40%;}
+
+#header-hobbies-1 { font-size: 1.5rem; 
+	font-family: san-serif; 
+	margin-left:30px;
+	color: rgba(0,0,0,0.7) }
+
+
+.hobbies-h2 { font-size: 2rem; font-family: sans-serif; margin-left: 25px; color: rgba(0,0,0,0.7);margin-left: 160px }
+
+.hobbies-nav a { margin-left: 30px; }
+
+.hobbies-figcaption { font-family: italic; 
+font-size: 1rem; 
+ }
+
+ #hobbies-img1{ margin-left: 150px; 
+ 	width: 800px; 
+ 	height: 400px;}
+ #hobbies-img2 { margin-left: 150px; width: 800px; height: 400px; }
+ #hobbies-img3{ margin-left: 150px; width: 800px; height: 400px; }
+ #hobbies-img4{ margin-left: 150px; width: 800px; height: 400px; }
+ #hobbies-img5{ margin-left: 150px; width: 800px; height: 400px; }
+ #hobbies-img6{ margin-left: 150px; width: 800px; height: 400px; }
