added in additional CSS code

--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -1,6 +1,6 @@
 
 
-body { font-family: "Times New Roman", Times, serif; 
+body { font-family:  serif; 
 	    background: #F0F8FF; 
 	    margin: 50px}
 
