--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -4,14 +4,82 @@ body { font-family:  serif;
 	    background: #F0F8FF; 
 	    margin: 50px}
 
+
+
+a[id="red"] { color: red; }
+a[id="green"] {color:green;}
+a[id="blue"] {color:blue;}
+
 header{ font-size:20px;
-        margin: 50px; }
+        margin: center; }
 
 
-/*h2 { color: darkblue; } */
-nav {  font-size: 2rem;
+h2 { color: darkblue;
+     font-family: sans-serif; } 
+
+
+
+nav {  font-size: 1.5rem;
        padding: 1rem  2rem;
-       border: 0.5rem solid darkblue;
-       margin: 50px;
+       border: 0.25rem solid black;
        background: lightblue;
         }
+#image-one { width: 500px ; 
+	         height: 400px; 
+	         margin-left: 1rem;
+	          }
+
+#image-two { width: 400px; 
+	         height: 400px; 
+	         margin-left: 1rem; }
+
+figcaption { font-size: 1rem; }	  
+
+a:visited { color: rgb(7,185,245); }        
+a:hover { color: darkblue; }
+a:active { color:red; }
+
+ul { background-color: orange;
+padding: 1rem; 
+border: 0.25rem solid black;
+}
+     
+ul li { margin-left: 1rem;
+ font-family: italic; }
+
+
+
+
+
+
+ /* Second webpage "Hobbies" CSS */
+
+#hobbies-body { background-color: rgb(156,247,153); }
+
+#welcome-hobbies{ color: rgba(50,50,150,0.8) ;
+font-family:  sans-serif;
+font-size: 2rem;
+margin-left: 40%;}
+
+#header-hobbies-1 { font-size: 1.5rem; 
+	font-family: san-serif; 
+	margin-left:30px;
+	color: rgba(0,0,0,0.7) }
+
+
+.hobbies-h2 { font-size: 2rem; font-family: sans-serif; margin-left: 25px; color: rgba(0,0,0,0.7);margin-left: 160px }
+
+.hobbies-nav a { margin-left: 30px; }
+
+.hobbies-figcaption { font-family: italic; 
+font-size: 1rem; 
+ }
+
+ #hobbies-img1{ margin-left: 150px; 
+ 	width: 800px; 
+ 	height: 400px;}
+ #hobbies-img2 { margin-left: 150px; width: 800px; height: 400px; }
+ #hobbies-img3{ margin-left: 150px; width: 800px; height: 400px; }
+ #hobbies-img4{ margin-left: 150px; width: 800px; height: 400px; }
+ #hobbies-img5{ margin-left: 150px; width: 800px; height: 400px; }
+ #hobbies-img6{ margin-left: 150px; width: 800px; height: 400px; }
