--- a/styles/boot_strap_styles.css
+++ b/styles/boot_strap_styles.css
@@ -3,7 +3,8 @@
   
 
 
-  body { background-image: url("https://static.pexels.com/photos/149387/pexels-photo-149387.jpeg")}
+  body { background-image: url("https://static.pexels.com/photos/149387/pexels-photo-149387.jpeg");
+background: rgba(66,54,63,0.8);}
 
 
 
@@ -16,7 +17,7 @@
         padding: 15px;
         font-size: 18px;
         min-height: 300px; 
-        background: rgba(66,54,63,0.6);
+        
         margin-bottom: 0;
         
                   }
